# aws-idp-saml

./: .gitignore  .snyk  AWS.py  Browser.py  Config.py  Logging.py  Login.py  OSInfo.py  Password.py  Providers.py  README.md  SAMLSelector.py  ScreenshotRecorder.py  SeleniumHelper.py  Utilities.py  constants.py  getCredentials.py  keygen.py  pyproject.toml  requirements.txt  samlsts.demo
docker/: Dockerfile  Dockerfile-node  Dockerfile-node18  Dockerfile-py310  Dockerfile-python  Dockerfile-ubuntu
java-swing/: .snyk  dependency-reduced-pom.xml  pom.xml
java-swing/src/main/java/com/aws/saml/: BrowserLoginHandler.java  ConfigManager.java  ConfigurationDialog.java  CredentialManager.java  CredentialsDialog.java  DatabaseManager.java  PasswordManager.java  SamlAuthenticator.java  SamlParser.java  SamlRole.java  SwingMain.java  ThemeManager.java  TokenStateManager.java
java-swing/src/main/resources/: logback.xml
