[tool.poetry]
name = "aws-idp-saml"
version = "1.0"
description = "Log into your IdP and retrieve a SAML assertion for AWS. Use SAML assertion to assume an AWS role for use with SDK and CLI."
authors = ["Ryan Leach <no-reply@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
selenium = ">=4.15.1"
tabulate = "^0.9.0"
requests = "^2.25.1"
boto3 = "^1.20.24"
botocore = "^1.23.24"
lxml = "^4.8.0"
beautifulsoup4 = ">=4.10.0"
cryptography = "^3.4.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
