[tool.poetry]
name = "aws-idp-saml"
version = "1.0"
description = "Log into your IdP and retrieve a SAML assertion for AWS. Use SAML assertion to assume an AWS role for use with SDK and CLI."
authors = ["Ryan Leach <no-reply@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
selenium = ">=4.15.1"
tabulate = "^0.9.0"
requests = ">=2.31.0"
boto3 = "^1.20.24"
botocore = ">=1.32.4"
lxml = ">=4.9.3"
beautifulsoup4 = ">=4.10.0"
cryptography = ">=41.0.5"
defusedxml = ">=0.7.1"
certifi = ">=2023.11.17"
pyopenssl = ">=23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
