[tool.poetry]
name = "aws-idp-saml"
version = "1.0"
description = "Log into your IdP and retrieve a SAML assertion for AWS. Use SAML assertion to assume an AWS role for use with SDK and CLI."
authors = ["Ryan Leach <no-reply@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
selenium = ">=4.40.0"
tabulate = "^0.9.0"
requests = ">=2.32.5"
boto3 = ">=1.42.48"
botocore = ">=1.42.48"
#lxml = ">=4.9.3"
beautifulsoup4 = ">=4.14.3"
cryptography = ">=46.0.5"
defusedxml = ">=0.7.1"
certifi = ">=2026.1.4"
pyopenssl = ">=25.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[dependency-groups]
dev = [
    "boto3>=1.42.75",
    "botocore[crt]>=1.42.75",
    "cryptography>=46.0.7",
    "defusedxml>=0.7.1",
    "requests>=2.33.1",
    "selenium>=4.41.0",
    "tabulate>=0.10.0",
]
